# Husky-Markdown

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
LICENSES/: material-color-utilities.txt  qwindowkit-Apache-2.0.txt
res/: resources.qrc
res/locales/: Husky-Markdown_zh.qm  Husky-Markdown_zh.ts  Husky-Markdown_zh_CN.ts
res/styles/: material_blue_light.css  material_blue_light_central_widget_maximize.css  material_blue_light_central_widget_normal.css  material_blue_light_navigation_rail_btn_active.css  material_blue_light_navigation_rail_btn_label_active.css  material_blue_light_navigation_rail_btn_label_normal.css  material_blue_light_navigation_rail_btn_normal.css
res/webview/: bridge.js  index.css  index.html  index.js
src/: main.cxx
src/file_watcher/: file_watcher.cxx  file_watcher.hxx
src/frameless_window/: frameless_patcher.cxx  frameless_patcher.hxx
src/mainwindow/: mainwindow.cxx  mainwindow.hxx  mainwindow.ui
src/material_design/color_scheme/: color_gen.cxx  color_gen.hxx  current_scheme.cxx  current_scheme.hxx
src/navigation_rail/: navigation_rail.cxx  navigation_rail.hxx
src/request_handler/: request_handler.cxx  request_handler.hxx
src/search_bar/: search_bar.cxx  search_bar.hxx
src/theme_loader/: theme_loader.cxx  theme_loader.hxx
src/webview/: webview.cxx  webview.hxx
src/webview_ipc/: webview_ipc.cxx  webview_ipc.hxx
ui_src/: README.md  index.html  package-lock.json  package.json
ui_src/archives/src/components/: SideBar.vue
ui_src/src/: App.css  App.tsx  App.vue  Colors.css  Interface.css  Interface.jsx  SideBar.css  SideBar.jsx  i18n.ts  main.jsx  vite-env.d.ts
ui_src/src/components/: SideBar.vue
utils/: state_color_calculator.py
utils/StateLayerCalculator/: CMakeLists.txt
